# mila

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  append_log.py
.github/: ci.yaml  ci.yml
.github/workflows/: ci.yml
data/: default_settings.json
src/: file.rs  files.rs  helpers.rs  main.rs  models.rs  processes.rs  settings.rs
