[package]
name = "mila"
authors = ["A H Bensiali"]
description = "file rotation with bells and whilsts"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
serde = {version = "1.0.196", features=["derive"]}
serde_json = "1.0.113"
