[package]
name = "mila"
authors = ["A H Bensiali"]
description = "file rotation with bells and whilsts"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.2"
inotify = "0.10.2"
log = "0.4.21"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"

[[bin]]
name = "irotate"
path = "src/bin/irotate.rs"
