[package]
name = "mila"
authors = ["A H Bensiali"]
description = "file rotation with bells and whilsts"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
futures-util = "0.3.30"
inotify = {version = "0.10.2", features=["stream", "tokio"]}
regex = "1.10.3"
serde = {version = "1.0.196", features=["derive"]}
serde_json = "1.0.113"
tokio = {version="1.36.0", features=["full"]}
